[gd_scene load_steps=13 format=2]

[ext_resource path="res://Assets/Sprites/player.png" type="Texture" id=1]
[ext_resource path="res://Characters/Player.gd" type="Script" id=2]
[ext_resource path="res://Assets/Sprites/player-fireballt.png" type="Texture" id=3]
[ext_resource path="res://Assets/Sprites/player-walk.png" type="Texture" id=4]

[sub_resource type="CapsuleShape2D" id=1]
radius = 139.0
height = 32.0

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 320, 320 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 320, 0, 320, 320 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 640, 0, 320, 320 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 320, 320 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 320, 0, 320, 320 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 640, 0, 320, 320 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 6 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "fireball",
"speed": 5.0
}, {
"frames": [ SubResource( 9 ), SubResource( 10 ), SubResource( 11 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
} ]

[node name="Player" type="KinematicBody2D"]
scale = Vector2( 0.25, 0.25 )
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
visible = false
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 1, 3 )
shape = SubResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 1.5, 1.5 )

[node name="JumpTimeout" type="Timer" parent="."]
wait_time = 0.25

[node name="JumpStepDown" type="Timer" parent="."]
wait_time = 0.1

[node name="JumpAffordance" type="Timer" parent="."]
wait_time = 0.15

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 5 )
animation = "fireball"

[node name="Respawn" type="Timer" parent="."]
wait_time = 3.0

[connection signal="timeout" from="JumpTimeout" to="." method="_on_JumpTimeout_timeout"]
[connection signal="timeout" from="JumpStepDown" to="." method="_on_JumpStepDown_timeout"]
[connection signal="timeout" from="JumpAffordance" to="." method="_on_JumpAffordance_timeout"]
[connection signal="timeout" from="Respawn" to="." method="_on_Respawn_timeout"]
